removed dead code and comments

--- a/project.ipynb
+++ b/project.ipynb
@@ -94,11 +94,11 @@
     "##### Research Question and Data\n",
     "In this project, we look to explore the following questions:\n",
     "\n",
-    "**Are signs of Mental health received differently across various languages? Are mental health concerns in some languages more pronounced?**\n",
+    "**Are signs of Mental health received differently across various languages? Are mental health concerns in some languages more pronounced?** We will also look into if **the \"emotionally involved\" semantics of a word be translated across various languages** through translation means. \n",
     "\n",
-    "We will also look into if **the \"emotionally involved\" semantics of a word be translated across various languages** through translation means. The dataset on mental health texts and associated labels, found on https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data\n",
+    "The dataset on mental health texts and associated labels, found on https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data\n",
     "\n",
-    "** \"The Mental Health Corpus is a collection of texts related to people with anxiety, depression, and other mental health issues. The corpus consists of two columns: one containing the comments, and the other containing labels indicating whether the comments are considered poisonous or not. \"**\n",
+    ">\"The Mental Health Corpus is a collection of texts related to people with anxiety, depression, and other mental health issues. The corpus consists of two columns: one containing the comments, and the other containing labels indicating whether the comments are considered poisonous or not.\"\n",
     "\n",
     "First, we will explore, clean and visualize the dataset. Then we run a translation model on a sample of the data using Meta's M2M model and explore the text in French and Chinese. We will validate it and compare examples with the Google Translate API. Then, we will create models for each language, training and predicting the data on each respective language. We will then compare scores and how respective models performs in predicting mental health concerns across languages. We want to see to what extent, are the models able to pick up on signs and patterns of mental health concerns across languages \n",
     "\n",
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
-    "from transformers import T5Tokenizer, T5ForConditionalGeneration, M2M100ForConditionalGeneration, M2M100Tokenizer\n",
+    "from transformers import M2M100ForConditionalGeneration, M2M100Tokenizer\n",
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -170,8 +170,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "from googletrans import Translator\n",
-    "import time\n",
-    "\n"
+    "import time"
    ]
   },
   {
@@ -444,8 +443,7 @@
     }
    ],
    "source": [
-    "# IF too big, random sample the dataframe\n",
-    "\n",
+    "# Random sample the dataframe of 500 texts \n",
     "mh_texts = mh_df.sample(n=500, replace=True, random_state=1)\n",
     "print(\"Shape of random sampled dataset:\", mh_texts.shape)\n",
     "display(mh_texts.head())\n",
@@ -488,7 +486,7 @@
     }
    ],
    "source": [
-    "# Plotting a pie chart\n",
+    "# Pie chart representation of frequencies\n",
     "freq_count = mh_texts['label'].value_counts()\n",
     "\n",
     "plt.pie(freq_count, labels=['no concern', 'mental health\\nconcern'], autopct='%1.1f%%', startangle=90, colors=['skyblue', 'lightcoral'])\n",
@@ -521,6 +519,7 @@
     }
    ],
    "source": [
+    "#bar chart representation of frequencies\n",
     "freq_count.plot(kind='barh', color=['skyblue', 'lightcoral'])\n",
     "plt.title('Frequency of concerns')\n",
     "plt.xlabel('Frequency')\n",
@@ -549,20 +548,6 @@
     "device = \"cuda\"\n",
     "m2m_model = M2M100ForConditionalGeneration.from_pretrained(\"facebook/m2m100_418M\")\n",
     "m2m_tokenizer = M2M100Tokenizer.from_pretrained(\"facebook/m2m100_418M\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "xWO44hOOMZbj"
-   },
-   "outputs": [],
-   "source": [
-    "#Google T-5 model\n",
-    "# model_id = \"google/flan-t5-large\"\n",
-    "# model = T5ForConditionalGeneration.from_pretrained(model_id).to(device)\n",
-    "# tokenizer = T5Tokenizer.from_pretrained(model_id)"
    ]
   },
   {
@@ -1084,7 +1069,7 @@
     }
    ],
    "source": [
-    "# Translate from English to French (easy language)\n",
+    "# Translate from English to French\n",
     "french_texts = []\n",
     "\n",
     "for i, en_text in enumerate(mh_texts['text']):\n",
@@ -1092,7 +1077,7 @@
     "  encoded_en = m2m_tokenizer(en_text, return_tensors=\"pt\")\n",
     "\n",
     "  generated_tokens = m2m_model.generate(\n",
-    "      **encoded_en, # input ids and attention mask\n",
+    "      **encoded_en, \n",
     "      forced_bos_token_id=m2m_tokenizer.get_lang_id(\"fr\"), # to French\n",
     "      max_new_tokens=40\n",
     "  )\n",
@@ -1620,7 +1605,7 @@
     }
    ],
    "source": [
-    "# Translate from English to Chinese (hard language)\n",
+    "# Translate from English to Chinese\n",
     "\n",
     "chinese_texts = []\n",
     "\n",
@@ -1629,7 +1614,7 @@
     "  encoded_en = m2m_tokenizer(en_text, return_tensors=\"pt\")\n",
     "\n",
     "  generated_tokens = m2m_model.generate(\n",
-    "      **encoded_en, # input ids and attention mask\n",
+    "      **encoded_en, \n",
     "      forced_bos_token_id=m2m_tokenizer.get_lang_id(\"zh\"), # to Chinese\n",
     "      max_new_tokens=40\n",
     "  )\n",
@@ -1669,9 +1654,8 @@
    "outputs": [],
    "source": [
     "#Load cached translations (if necessary)\n",
-    "french_df = pd.read_csv(\"cache/french_texts.csv\")\n",
-    "chinese_df = pd.read_csv(\"cache/chinese_texts.csv\")\n",
-    "# mh_texts = pd.read_csv(\"cache/sampled_mh.csv\")"
+    "# french_df = pd.read_csv(\"cache/french_texts.csv\")\n",
+    "# chinese_df = pd.read_csv(\"cache/chinese_texts.csv\")"
    ]
   },
   {
@@ -1906,7 +1890,6 @@
    ],
    "source": [
     "#Finished translations\n",
-    "\n",
     "print(f\"English translations and Gold Label {mh_texts.shape}\")\n",
     "display(mh_texts.head())\n",
     "print(f\"French translations {french_df.shape}\")\n",
@@ -2031,9 +2014,8 @@
     }
    ],
    "source": [
-    "# Run translation validation (using Google Translate API as validation set)\n",
+    "# Running translation validation (using Google Translate API as validation set)\n",
     "# https://pypi.org/project/googletrans/\n",
-    "\n",
     "\n",
     "# Initialize the translator\n",
     "translator = Translator()\n",
@@ -2052,11 +2034,9 @@
     "        boundary+=1\n",
     "\n",
     "\n",
-    "# Validate translations for French and print results (compare 15 meta translated texts and google translated texts)\n",
+    "# Validate translations for French and compare results \n",
     "print(\"French Translated Text\")\n",
     "validate_translations(french_df[\"text\"], mh_texts['text'].to_list(),  'en')\n",
-    "\n",
-    "\n",
     "\n",
     "# Validate translations for Chinese and print results\n",
     "print(\"Chinese Translated Text\")\n",
@@ -2070,11 +2050,11 @@
    },
    "source": [
     "##### Comment on the pitfalls of the Meta Translation API\n",
-    "The Meta Translation API has multiple pitfalls when it comes to its translation of texts. One challenge lies in the accuracy and consistency of the translations, which can vary across many different languages and it can struggle with complex sentences or nuanced language. Since this dataset consists of primarily text messages, the Meta Translation API is under much more \"stress\" since the model has a limited contextual understanding which can lead to mistranslations. The translated texts do exhibit variations in wordings, but in some instances, completely fail to convey the emotional depth that was intended by the sender. As a result, this showcases a significant limitation of the API and its ability to preserve the emotional context of these texts as the translated texts lose meaning. \n",
+    "The Meta Translation API has some pitfalls when it comes to its translation of texts. One challenge lies in the accuracy and consistency of the translations, which can vary across many different languages and it can struggle with complex sentences or nuanced language. Since this dataset consists of primarily text messages, the Meta Translation API is under much more \"stress\" since the model has a limited contextual understanding which can lead to mistranslations. The translated texts do exhibit variations in wordings, but in some instances, completely fail to convey the emotional depth that was intended by the sender. As a result, this showcases a significant limitation of the API and its ability to preserve the emotional context of these texts as the translated texts lose meaning. Nevertheless, we see that basic themes and keywords do translate over, although there is some variability with the overall thorough text translation.\n",
     "\n",
     "\n",
     "##### Discuss how well translation models are at translating emotionally charged texts\n",
-    "As shown through the Google Translation API and Meta Translation API, translating emotionally charged texts with current models is quite limited. the Google Translation API showcases how limited its understanding of terms is where it often abbreviates text that it considers to be extraneous. For example, the original said \"ok redflagwatch ive ruled redflag fuck myself ive mostly miserable life finally resolved kill...\" and the Google translated text was just \"Ok Redflagwatch 4\", showing its inherent disregard for true meaning. Additionally, issues may arise due to the subjective nature of emotions, cultural variations in expressing sentiments, and the need for a deep understanding of context. As a result, while these models have made significant strides, achieving a nuanced and emotionally accurate translation remains a complex task, emphasizing the ongoing importance of human involvement in ensuring sensitive and precise language interpretation."
+    "As shown through the Google Translation API and Meta Translation API, translating emotionally charged texts with current models does a decent job but has it's limitation. the Google Translation API showcases how limited its understanding of terms is where it often abbreviates text that it considers to be extraneous. For example, the original said \"ok redflagwatch ive ruled redflag fuck myself ive mostly miserable life finally resolved kill...\" and the Google translated text was just \"Ok Redflagwatch 4\", showing its inherent disregard for true meaning. Additionally, issues may arise due to the subjective nature of emotions, cultural variations in expressing sentiments, and the need for a deep understanding of context. As a result, while these models have made significant strides, achieving a nuanced and emotionally accurate translation remains a complex task, emphasizing the ongoing importance of human involvement in ensuring sensitive and precise language interpretation."
    ]
   },
   {
@@ -2161,7 +2141,6 @@
     "# Function to split dataset into training and testing sets\n",
     "\n",
     "def train_test_split_h(train_data, test_data, testing_split=.7):\n",
-    "    # combining and random shuffling label and text\n",
     "    train_texts = []\n",
     "    train_labels = []\n",
     "\n",
@@ -2389,6 +2368,7 @@
     }
    ],
    "source": [
+    "#baseline models and scores\n",
     "baseline_models = {}\n",
     "for language in languages:\n",
     "    print(f\"Models for {language} translated mental health texts\\n\")\n",
@@ -2745,6 +2725,7 @@
     }
    ],
    "source": [
+    "#making and storing encodings for each language\n",
     "encodings = {}\n",
     "\n",
     "for language in languages:\n",
@@ -2914,6 +2895,7 @@
     }
    ],
    "source": [
+    "#making and storing datasets for each language\n",
     "datasets = {}\n",
     "\n",
     "for language in languages:\n",
@@ -2949,7 +2931,6 @@
    ],
    "source": [
     "# Loading pre-trained BERT Model\n",
-    "\n",
     "model = DistilBertForSequenceClassification.from_pretrained(\n",
     "    model_name,\n",
     "    num_labels=len(label2id)\n",
@@ -2964,6 +2945,7 @@
    },
    "outputs": [],
    "source": [
+    "#training arguments\n",
     "training_args = TrainingArguments(\n",
     "    num_train_epochs=10,\n",
     "    per_device_train_batch_size=20,\n",
@@ -2975,7 +2957,7 @@
     "    logging_dir='./logs',\n",
     "    logging_steps=60,\n",
     "    evaluation_strategy='steps',\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -2987,7 +2969,6 @@
    "outputs": [],
    "source": [
     "#defining metrics\n",
-    "\n",
     "def compute_metrics(pred):\n",
     "  labels = pred.label_ids\n",
     "  preds = pred.predictions.argmax(-1)\n",
@@ -3014,6 +2995,7 @@
    },
    "outputs": [],
    "source": [
+    "#creating and storing trainers\n",
     "trainers = {}\n",
     "\n",
     "for language in languages:\n",
@@ -3257,6 +3239,7 @@
     }
    ],
    "source": [
+    "#training and evaluating trainers\n",
     "for language in languages:\n",
     "  print(f\"{language} translated mental health text model\")\n",
     "  trainers[language].train()\n",
@@ -3427,14 +3410,15 @@
     }
    ],
    "source": [
+    "#making and storing predictions\n",
     "predicted = {}\n",
     "for language in languages:\n",
     "  train_text, train_label, test_text, test_label = data_splits[language]\n",
     "  predicted_results = trainers[language].predict(datasets[language]['test_dataset'])\n",
     "\n",
-    "  predicted_labels = predicted_results.predictions.argmax(-1) # Get the highest probability prediction\n",
-    "  predicted_labels = predicted_labels.flatten().tolist()      # Flatten the predictions into a 1D list\n",
-    "  predicted_labels = [id2label[l] for l in predicted_labels]  # Convert from integers back to strings for readability\n",
+    "  predicted_labels = predicted_results.predictions.argmax(-1) \n",
+    "  predicted_labels = predicted_labels.flatten().tolist()      \n",
+    "  predicted_labels = [id2label[l] for l in predicted_labels]  \n",
     "  print(f\"Predicted labels of {language} testing data\")\n",
     "  display(predicted_labels[:10])\n",
     "  print(classification_report(test_label,\n",
@@ -3595,7 +3579,7 @@
     }
    ],
    "source": [
-    "#missclassifications\n",
+    "#printing missclassifications\n",
     "for language in languages:\n",
     "  train_text, train_label, test_text, test_label = data_splits[language]\n",
     "  print(f\"BERT {language} model misclassifications\\n\")\n",
@@ -3669,6 +3653,7 @@
     }
    ],
    "source": [
+    "#English classification plot\n",
     "plot_classif(\"English\", data_splits[\"english\"][3], predicted['english'])"
    ]
   },
@@ -3707,6 +3692,7 @@
     }
    ],
    "source": [
+    "#French classification plot\n",
     "plot_classif(\"French\", data_splits[\"french\"][3], predicted['french'])"
    ]
   },
@@ -3745,7 +3731,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Chinese classification plot\n",
     "plot_classif(\"Chinese\", data_splits[\"chinese\"][3], predicted['chinese'])"
    ]
   },
@@ -3877,7 +3863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
